<resources>

    <!-- modules -->
    <string name="app_name">ECAN</string>
    <string name="str_care">家长关怀</string>
    <string name="smart_home">智能家庭</string>
    <string name="smart_home_1">视频对话</string>
    <string name="smart_home_2">拍照</string>
    <string name="str_wakeup">起床提醒</string>
    <string name="str_sleep">睡眠提醒</string>
    <string name="str_eat">吃饭提醒</string>
    <string name="personal">自定义</string>
    <string name="tell_a_story">讲故事</string>
    <string name="light">亮度调节</string>
    <string name="sound">音量调节</string>
    <string name="set_date_ok">确定</string>
    <string name="clock_ok">设定闹钟</string>
    <string name="clock_close">关闭闹钟</string>
    <string name="clock_getup">起床提醒</string>
    <string name="clock_sleep">睡眠提醒</string>
    <string name="clock_eat">吃饭提醒</string>

    <!-- Wifi p2p layouts -->
    <string name="wifi_search_main_retry">重新搜索</string>
    <string name="wifi_search_main_join">连接设备</string>
    <string name="wifi_search_main_title">选择您要连接的设备：</string>

    <!-- Wifi p2p 提示 -->
    <string name="wifip2p_p2p_not_open">您手机的wifi直联模式没有打开，请打开手机wifi，并取消当前正在连接的Wifi网络（Wifi路由器）</string>
    <string name="wifip2p_p2p_scanning_title">注意</string>
    <string name="wifip2p_p2p_scanning">正在扫描附近设备</string>
    <string name="send_long_time">所传送文件较大，可能需要较长时间，请耐心等待...</string>
    <string name="wifip2p_send_peerinfo_success">成功发送连接请求信息</string>
    <string name="wifip2p_send_peerinfo_failed">发送连接请求信息失败</string>
    <string name="wifip2p_send_file_success">文件发送成功</string>
    <string name="wifip2p_send_file_failed">发送文件失败</string>
    <string name="wifip2p_rcv_file_success">文件接收成功</string>
    <string name="wifip2p_rcv_file_failed">接收文件失败</string>
    <string name="wifip2p_rcv_peer_address">成功收到连接设备信息</string>
    <string name="wifip2p_group_owner_text">Group owner :</string>
    <string name="wifip2p_report_ip_tips">点击报告IP可以向Group owner 报告自身IP</string>
    <string name="wifip2p_select_peer_dialog_title">请选择一个对等设备</string>
    <string name="wifip2p_discovery_sucess">发现设备成功</string>
    <string name="wifip2p_discovery_failed">搜索失败，错误码 :%1$d</string>
    <string name="wifip2p_connecting">正在连接设备</string>
    <string name="wifip2p_connecting_cancel">按返回键取消连接</string>
    <string name="wifip2p_connecting_canceled">连接已取消</string>
    <string name="wifip2p_connecting_cancel_failed">连接取消失败，错误码 :%1$d</string>
    <string name="wifip2p_connecting_failed">连接失败</string>
    <string name="wifip2p_wait">请等待设备连接</string>

    <!-- tips -->
    <string name="dialog_exit_app">您真的要退出程序吗？</string>
    <string name="already_login_wifi">已登录网络</string>
    <string name="setdate_date">设置日期</string>
    <string name="setdate_time">设置时间</string>
    <string name="setdate_success">设置成功</string>
    <string name="xiaoyi_name">姓名：小伊</string>
    <string name="xiaoyi_age">年龄：6岁</string>
    <string name="xiaoyi_name_title">请输入小伊的姓名</string>
    <string name="xiaoyi_age_title">请输入小伊的年龄</string>
    <string name="xiaoyi_name_prefx">姓名：</string>
    <string name="xiaoyi_age_prefx">年龄：</string>
    <string name="xiaoyi_age_fx">岁</string>

</resources>