<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/second_bk"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/icon_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/glass_bk" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/glass_above" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_care"
            android:textSize="30dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/care1_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:text="@string/str_wakeup"
        android:textColor="@drawable/setting_word_btn"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/care2_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text="@string/str_sleep"
        android:textColor="@drawable/setting_word_btn"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/care3_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text="@string/str_eat"
        android:textColor="@drawable/setting_word_btn"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/care4_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text="@string/personal"
        android:textColor="@drawable/setting_word_btn"
        android:textSize="25dp"
        android:textStyle="bold" />

</LinearLayout>